// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectionBrush renders an horizontal selection brush 1`] = `
<EuiSelectionBrush
  _adjustBy={
    Array [
      "x",
    ]
  }
  _adjustWhat={
    Array [
      0,
    ]
  }
  _allData={
    Array [
      Array [
        Object {
          "x": 0,
          "y": 2,
        },
        Object {
          "x": 1,
          "y": 4,
        },
      ],
      undefined,
    ]
  }
  _colorValue="black"
  _opacityValue={0.2}
  angleDomain={Array []}
  animation={true}
  clusters={
    Set {
      undefined,
    }
  }
  color="black"
  colorDomain={Array []}
  colorRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  fillDomain={Array []}
  fillRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getColor={[Function]}
  getColor0={[Function]}
  getFill={[Function]}
  getFill0={[Function]}
  getOpacity={[Function]}
  getOpacity0={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSize={[Function]}
  getSize0={[Function]}
  getStroke={[Function]}
  getStroke0={[Function]}
  getX={[Function]}
  getX0={[Function]}
  getY={[Function]}
  getY0={[Function]}
  innerHeight={150}
  innerWidth={550}
  key=".3"
  marginBottom={40}
  marginLeft={40}
  marginRight={10}
  marginTop={10}
  onBrushEnd={[Function]}
  opacity={0.2}
  opacityDomain={Array []}
  opacityType="literal"
  orientation="horizontal"
  radiusDomain={Array []}
  sameTypeIndex={0}
  sameTypeTotal={1}
  seriesIndex={1}
  sizeDomain={Array []}
  sizeRange={
    Array [
      1,
      10,
    ]
  }
  strokeDomain={Array []}
  strokeRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  xDomain={
    Array [
      0,
      1,
    ]
  }
  xPadding={0}
  xRange={
    Array [
      0,
      550,
    ]
  }
  xType="linear"
  yBaseValue={0}
  yDomain={
    Array [
      2,
      4,
    ]
  }
  yPadding={0}
  yRange={
    Array [
      150,
      0,
    ]
  }
  yType="linear"
>
  <g
    style={
      Object {
        "pointerEvents": "none",
      }
    }
    transform="translate(40, 10)"
  >
    <rect
      fill="black"
      height={150}
      opacity={0.2}
      width={50}
      x={50}
      y={0}
    />
  </g>
</EuiSelectionBrush>
`;

exports[`EuiSelectionBrush renders an vertical selection brush 1`] = `
<EuiSelectionBrush
  _adjustBy={
    Array [
      "x",
    ]
  }
  _adjustWhat={
    Array [
      0,
    ]
  }
  _allData={
    Array [
      Array [
        Object {
          "x": 0,
          "y": 2,
        },
        Object {
          "x": 1,
          "y": 4,
        },
      ],
      undefined,
    ]
  }
  _colorValue="black"
  _opacityValue={0.2}
  angleDomain={Array []}
  animation={true}
  clusters={
    Set {
      undefined,
    }
  }
  color="black"
  colorDomain={Array []}
  colorRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  fillDomain={Array []}
  fillRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getColor={[Function]}
  getColor0={[Function]}
  getFill={[Function]}
  getFill0={[Function]}
  getOpacity={[Function]}
  getOpacity0={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSize={[Function]}
  getSize0={[Function]}
  getStroke={[Function]}
  getStroke0={[Function]}
  getX={[Function]}
  getX0={[Function]}
  getY={[Function]}
  getY0={[Function]}
  innerHeight={150}
  innerWidth={550}
  key=".3"
  marginBottom={40}
  marginLeft={40}
  marginRight={10}
  marginTop={10}
  onBrushEnd={[Function]}
  opacity={0.2}
  opacityDomain={Array []}
  opacityType="literal"
  orientation="vertical"
  radiusDomain={Array []}
  sameTypeIndex={0}
  sameTypeTotal={1}
  seriesIndex={1}
  sizeDomain={Array []}
  sizeRange={
    Array [
      1,
      10,
    ]
  }
  strokeDomain={Array []}
  strokeRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  xDomain={
    Array [
      0,
      1,
    ]
  }
  xPadding={0}
  xRange={
    Array [
      0,
      550,
    ]
  }
  xType="linear"
  yBaseValue={0}
  yDomain={
    Array [
      2,
      4,
    ]
  }
  yPadding={0}
  yRange={
    Array [
      150,
      0,
    ]
  }
  yType="linear"
>
  <g
    style={
      Object {
        "pointerEvents": "none",
      }
    }
    transform="translate(40, 10)"
  >
    <rect
      fill="black"
      height={50}
      opacity={0.2}
      width={550}
      x={0}
      y={50}
    />
  </g>
</EuiSelectionBrush>
`;

exports[`EuiSelectionBrush renders free form selection brush 1`] = `
<EuiSelectionBrush
  _adjustBy={
    Array [
      "x",
    ]
  }
  _adjustWhat={
    Array [
      0,
    ]
  }
  _allData={
    Array [
      Array [
        Object {
          "x": 0,
          "y": 2,
        },
        Object {
          "x": 1,
          "y": 4,
        },
      ],
      undefined,
    ]
  }
  _colorValue="black"
  _opacityValue={0.2}
  angleDomain={Array []}
  animation={true}
  clusters={
    Set {
      undefined,
    }
  }
  color="black"
  colorDomain={Array []}
  colorRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  fillDomain={Array []}
  fillRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  getAngle={[Function]}
  getAngle0={[Function]}
  getColor={[Function]}
  getColor0={[Function]}
  getFill={[Function]}
  getFill0={[Function]}
  getOpacity={[Function]}
  getOpacity0={[Function]}
  getRadius={[Function]}
  getRadius0={[Function]}
  getSize={[Function]}
  getSize0={[Function]}
  getStroke={[Function]}
  getStroke0={[Function]}
  getX={[Function]}
  getX0={[Function]}
  getY={[Function]}
  getY0={[Function]}
  innerHeight={150}
  innerWidth={550}
  key=".3"
  marginBottom={40}
  marginLeft={40}
  marginRight={10}
  marginTop={10}
  onBrushEnd={[Function]}
  opacity={0.2}
  opacityDomain={Array []}
  opacityType="literal"
  orientation="both"
  radiusDomain={Array []}
  sameTypeIndex={0}
  sameTypeTotal={1}
  seriesIndex={1}
  sizeDomain={Array []}
  sizeRange={
    Array [
      1,
      10,
    ]
  }
  strokeDomain={Array []}
  strokeRange={
    Array [
      "#EF5D28",
      "#FF9833",
    ]
  }
  xDomain={
    Array [
      0,
      1,
    ]
  }
  xPadding={0}
  xRange={
    Array [
      0,
      550,
    ]
  }
  xType="linear"
  yBaseValue={0}
  yDomain={
    Array [
      2,
      4,
    ]
  }
  yPadding={0}
  yRange={
    Array [
      150,
      0,
    ]
  }
  yType="linear"
>
  <g
    style={
      Object {
        "pointerEvents": "none",
      }
    }
    transform="translate(40, 10)"
  >
    <rect
      fill="black"
      height={50}
      opacity={0.2}
      width={50}
      x={50}
      y={50}
    />
  </g>
</EuiSelectionBrush>
`;
